--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # El orden importa: primero las fuentes, luego el core, luego las apps.
+  - ./flux-system
   - ./sources
-  - ./core
   - ./apps
