--- a/cluster/apps/storage/kustomization.yaml
+++ b/cluster/apps/storage/kustomization.yaml
@@ -1,7 +1,6 @@
+# cluster/apps/storage/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./flux-system
-  - ./sources
-  - ./apps
-  - ./apps/storage
+  - smb-csi-driver/
+  - smb-test/
