--- a/cluster/apps/storage/smb-csi-driver/helm-release.yaml
+++ b/cluster/apps/storage/smb-csi-driver/helm-release.yaml
@@ -2,14 +2,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: csi-driver-smb
+  name: smb-csi-driver-release 
   namespace: kube-system 
 spec:
   interval: 15m
   chart:
     spec:
       chart: csi-driver-smb
-      version: "1.15.0" # Verifica la última versión estable en el repositorio
+      version: "1.15.0"
       sourceRef:
         kind: HelmRepository
         name: csi-driver-smb
@@ -21,17 +21,13 @@ spec:
     remediation:
       retries: 3
   values:
-    # Habilita el provisioner para crear PersistentVolumes dinámicamente
-    controller:
-      enableProvisioning: true
+    fullnameOverride: csi-driver-smb # <--- ASEGÚRATE DE QUE ESTÉ ASÍ
 
-    # storageClass para el driver SMB
     storageClass:
       enabled: true
-      name: smb-client # Nombre de tu nueva StorageClass SMB
-      reclaimPolicy: Delete # O Retain
+      name: smb-client
+      reclaimPolicy: Delete
       mountOptions:
-        - dir_mode=0777 # Permisos de directorio 
-        - file_mode=0777 # Permisos de archivo 
-        - vers=3.0 # Versión del protocolo SMB
-    
+        - dir_mode=0777
+        - file_mode=0777
+        - vers=3.0
