--- a/cluster/apps/storage/kustomization.yaml
+++ b/cluster/apps/storage/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - smb-csi-driver/
+ #- smb-csi-driver/
   - smb-test/
+  - helm-release-smb.yaml
