--- a/cluster/apps/storage/kustomization.yaml
+++ b/cluster/apps/storage/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
  #- smb-csi-driver/
-  - smb-test/
+ #- smb-test/
   - helm-release-smb.yaml
+  - smb-test-resource.yaml
