--- a/cluster/sources/smb-csi-driver.yaml
+++ b/cluster/sources/smb-csi-driver.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://kubernetes-csi.github.io/csi-driver-smb
+  url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
