--- a/cluster/apps/storage/kustomization.yaml
+++ b/cluster/apps/storage/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
  #- smb-csi-driver/
  #- smb-test/
   - helm-release-smb.yaml
-  #- smb-test-resource.yaml
+  - smb-storageclass.yaml
+  - smb-test-resource.yaml
