--- a/cluster/apps/storage/smb-storageclass.yaml
+++ b/cluster/apps/storage/smb-storageclass.yaml
@@ -4,8 +4,7 @@ metadata:
   name: smb-client
 provisioner: smb.csi.k8s.io
 parameters:
-  # Necesitas cambiar esto por tu servidor SMB real
-  source: "//192.168.1.6/media"  # ⚠️ CAMBIA ESTO POR TU SERVIDOR SMB
+  source: "//192.168.1.6/media"  
   csi.storage.k8s.io/node-stage-secret-name: "smb-share-creds"
   csi.storage.k8s.io/node-stage-secret-namespace: "database"
 reclaimPolicy: Delete
