--- a/cluster/apps/storage/kustomization.yaml
+++ b/cluster/apps/storage/kustomization.yaml
@@ -2,8 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
- #- smb-csi-driver/
- #- smb-test/
-  - helm-release-smb.yaml
+  - rbac.yaml
+  - controller.yaml
+  - node.yaml
   - smb-storageclass.yaml
   - smb-test-resource.yaml
