--- a/cluster/apps/storage/controller.yaml
+++ b/cluster/apps/storage/controller.yaml
@@ -43,7 +43,7 @@ spec:
             periodSeconds: 10
             failureThreshold: 5
         - name: csi-provisioner
-          image: mcr.microsoft.com/oss/kubernetes-csi/csi-provisioner:v4.0.0
+          image: registry.k8s.io/sig-storage/csi-provisioner:v4.0.1
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
@@ -57,7 +57,7 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-resizer
-          image: mcr.microsoft.com/oss/kubernetes-csi/csi-resizer:v1.10.0
+          image: registry.k8s.io/sig-storage/csi-resizer:v1.11.2
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
