--- a/cluster/apps/traefik-system/helm-release.yaml
+++ b/cluster/apps/traefik-system/helm-release.yaml
@@ -17,7 +17,8 @@ spec:
     #  servicio sea de tipo LoadBalancer para que MetalLB le dé una IP
     service:
       type: LoadBalancer
-
+      spec: 
+      loadBalancerIP: 192.168.1.44 
     # Habilita el dashboard de Traefik para poder verlo
     api:
       dashboard: true
