feat: Mediastack manifiest 1

--- a/cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
+++ b/cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
@@ -9,7 +9,8 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate 
+   type: Recreate 
+  selector: 
     matchLabels:
       app: qbittorrent
   template:
