--- a/cluster/apps/media-stack/prowlarr/kustomization.yaml
+++ b/cluster/apps/media-stack/prowlarr/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - lidarr-pvc.yaml
-  - lidarr-deployment.yaml
-  - lidarr-networking.yaml
+  - prowlarr-pvc.yaml
+  - prowlarr-deployment.yaml
+  - prowlarr-networking.yaml
