--- a/cluster/apps/media-stack/prowlarr/prowlarr-pvc.yaml
+++ b/cluster/apps/media-stack/prowlarr/prowlarr-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: lidarr-config
+  name: prowlarr-config
   namespace: media-stack
 spec:
   accessModes:
