fix: Mediastack manifest 5

--- a/cluster/apps/media-stack/lidarr/lidarr-networking.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-networking.yaml
@@ -21,7 +21,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`music.homelab.local`)
+    - match: Host(`prowlarr.homelab.local`)
       kind: Rule
       services:
         - name: lidarr
