--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -13,26 +13,41 @@ data:
             description: Gestor de Series
 
         - Radarr: # Aunque no esté instalado, lo dejamos de ejemplo
-            href: http://peliculas.homelab.local
+            href: http://movies.homelab.local
             icon: radarr.png
             description: Gestor de Películas
+
+        - Lidarr:
+            href: http://music.homelab.local
+            icon: lidarr.png
+            description: Cliente de Musica
+
+        - Prowlarr:
+            href: http://prowlarr.homelab.local
+            icon: prowlarrpng
+            description: Cliente de TODO
 
         - qBittorrent:
             href: http://downloads.homelab.local
             icon: qbittorrent.png
             description: Cliente de Descargas
 
+
+
     - "Infraestructura":
         - Traefik:
-            href: http://traefik.homelab.local
+            href: http://traefik.homelab.local/dashboard/#/
             icon: traefik.png
             description: Dashboard de Traefik
 
   # --- Configuración de los marcadores ---
   bookmarks.yaml: |
-    - "Búsqueda":
-        - "Google": "https://google.com"
-        - "DuckDuckGo": "https://duckduckgo.com"
+    - Búsqueda:
+        - Google:
+            href: https://google.com
+        - DuckDuckGo:
+            href: https://duckduckgo.com
+
 
   # --- Configuración de los Widgets ---
   widgets.yaml: |
