--- a/cluster/apps/homepage/homepage-deployment.yaml
+++ b/cluster/apps/homepage/homepage-deployment.yaml
@@ -1,75 +1,213 @@
-# cluster/apps/homepage/homepage-deployment.yaml
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: homepage
+  name: homepage-config
   namespace: media-stack 
   labels:
     app: homepage
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: homepage
-  template:
-    metadata:
-      labels:
-        app: homepage
-    spec:
-      containers:
-        - name: homepage
-          image: ghcr.io/gethomepage/homepage:v0.9.5
-          ports:
-            - containerPort: 3000
-          volumeMounts:
-            - name: config
-              mountPath: /app/config
-            - name: config-files
-              mountPath: /app/config/services.yaml
-              subPath: services.yaml
-            - name: config-files
-              mountPath: /app/config/bookmarks.yaml
-              subPath: bookmarks.yaml
-            - name: config-files
-              mountPath: /app/config/widgets.yaml
-              subPath: widgets.yaml
-            - name: config-files
-              mountPath: /app/config/settings.yaml
-              subPath: settings.yaml
-      volumes:
-        - name: config
-          emptyDir: {}
-        - name: config-files
-          configMap:
-            name: homepage-config
+    updated: "2025-07-08"
+data:
+  # --- Configuración de los servicios que aparecerán en el dashboard ---
+  services.yaml: |
+    - "Media Stack":
+        - Sonarr:
+            href: http://series.homelab.local
+            icon: sonarr.png
+            description: Gestor de Series TV
+            widget:
+              type: sonarr
+              url: http://series.homelab.local
+              key: {{HOMEPAGE_VAR_SONARR_TOKEN}}
 
---- # <-- SEPARADOR 
+        - Radarr:
+            href: http://movies.homelab.local
+            icon: radarr.png
+            description: Gestor de Películas
+            widget:
+              type: radarr
+              url: http://movies.homelab.local
+              key: {{HOMEPAGE_VAR_RADARR_TOKEN}}
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: homepage
-  namespace: media-stack
-spec:
-  selector:
-    app: homepage
-  ports:
-    - port: 3000
-      targetPort: 3000
+        - Lidarr:
+            href: http://music.homelab.local
+            icon: lidarr.png
+            description: Gestor de Música
+            widget:
+              type: lidarr
+              url: http://music.homelab.local
+              key: {{HOMEPAGE_VAR_LIDARR_TOKEN}}
 
---- # <-- SEPARADOR 
+        - Prowlarr:
+            href: http://prowlarr.homelab.local
+            icon: prowlarr.png
+            description: Indexador de Contenido
+            widget:
+              type: prowlarr
+              url: http://prowlarr.homelab.local
+              key: {{HOMEPAGE_VAR_PROWLARR_TOKEN}}
 
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: homepage
-  namespace: media-stack
-spec:
-  entryPoints:
-    - web
-  routes:
-    - match: Host(`home.homelab.local`)
-      kind: Rule
-      services:
-        - name: homepage
-          port: 3000
+        - qBittorrent:
+            href: http://downloads.homelab.local
+            icon: qbittorrent.png
+            description: Cliente de Descargas
+            widget:
+              type: qbittorrent
+              url: http://downloads.homelab.local
+              username: {{HOMEPAGE_VAR_QBITTORRENT_USERNAME}}
+              password: {{HOMEPAGE_VAR_QBITTORRENT_PASSWORD}}
+
+    - "Infraestructura":
+        - Traefik:
+            href: http://traefik.homelab.local/dashboard/
+            icon: traefik.png
+            description: Reverse Proxy & Load Balancer
+            widget:
+              type: traefik
+              url: http://traefik.homelab.local
+
+        - Portainer:
+            href: http://portainer.homelab.local
+            icon: portainer.png
+            description: Container Management
+            widget:
+              type: portainer
+              url: http://portainer.homelab.local
+              env: 1
+              key: {{HOMEPAGE_VAR_PORTAINER_TOKEN}}
+
+    - "Monitoreo":
+        - Grafana:
+            href: http://grafana.homelab.local
+            icon: grafana.png
+            description: Dashboards y Métricas
+            widget:
+              type: grafana
+              url: http://grafana.homelab.local
+              username: {{HOMEPAGE_VAR_GRAFANA_USERNAME}}
+              password: {{HOMEPAGE_VAR_GRAFANA_PASSWORD}}
+
+        - Prometheus:
+            href: http://prometheus.homelab.local
+            icon: prometheus.png
+            description: Sistema de Monitoreo
+            widget:
+              type: prometheus
+              url: http://prometheus.homelab.local
+
+  # --- Configuración de los marcadores ---
+  bookmarks.yaml: |
+    - Desarrollo:
+        - GitHub:
+            href: https://github.com
+            icon: github.png
+        - GitLab:
+            href: https://gitlab.com
+            icon: gitlab.png
+        - Docker Hub:
+            href: https://hub.docker.com
+            icon: docker.png
+
+    - Búsqueda:
+        - Google:
+            href: https://google.com
+            icon: google.png
+        - DuckDuckGo:
+            href: https://duckduckgo.com
+            icon: duckduckgo.png
+
+    - Homelab:
+        - Kubernetes Dashboard:
+            href: http://k8s-dashboard.homelab.local
+            icon: kubernetes.png
+        - Router Admin:
+            href: http://192.168.1.1
+            icon: router.png
+        - NAS:
+            href: http://nas.homelab.local
+            icon: synology.png
+
+  # --- Configuración de los Widgets ---
+  widgets.yaml: |
+    - resources:
+        label: Recursos del Cluster
+        cpu: true
+        memory: true
+        disk: /
+
+    - datetime:
+        text_size: xl
+        format:
+          dateStyle: full
+          timeStyle: short
+          locale: es-MX
+
+    - search:
+        provider: google
+        target: _blank
+
+    - greeting:
+        text_size: xl
+        text: "¡Bienvenido a tu Homelab!"
+
+    - kubernetes:
+        cluster:
+          show: true
+          cpu: true
+          memory: true
+          showLabel: true
+          label: "cluster"
+        nodes:
+          show: true
+          cpu: true
+          memory: true
+          showLabel: true
+
+  # --- Configuración General ---
+  settings.yaml: |
+    title: Mi Homelab Dashboard
+    subtitle: Actualizado - 8 de Julio, 2025
+    background: 
+      image: https://images.unsplash.com/photo-1518709268805-4e9042af2ac1
+      blur: sm
+      saturate: 50
+      brightness: 50
+    
+    theme: dark
+    color: slate
+    
+    headerStyle: clean
+    hideVersion: true
+    
+    layout:
+      - "Media Stack":
+          style: row
+          columns: 3
+      - "Infraestructura":
+          style: row
+          columns: 2
+      - "Monitoreo":
+          style: row
+          columns: 2
+    
+    quicklaunch:
+      searchDescriptions: true
+      hideInternetSearch: false
+      hideVisitURL: false
+    
+    statusStyle: "dot"
+    showStats: true
+    
+    favicon: https://raw.githubusercontent.com/gethomepage/homepage/main/public/android-chrome-192x192.png
+    
+    # Configuración de idioma
+    language: es
+    
+    # Configuración de unidades
+    units: metric
+    
+    # Mostrar información adicional
+    showStats: true
+    showVersion: false
+    
+    # Configuración de logging
+    logLevel: info
