--- a/cluster/apps/pgadmin/kustomization.yaml
+++ b/cluster/apps/pgadmin/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - pgadmin-pvc.yaml
   - pgadmin-configmap.yaml
   - pgadmin-deployment.yaml
   - pgadmin-networking.yaml
