--- a/cluster/apps/commafeed/commafeed-deployment.yaml
+++ b/cluster/apps/commafeed/commafeed-deployment.yaml
@@ -1,36 +1,38 @@
+# cluster/apps/commafeed/commafeed-deployment.yaml
 apiVersion: apps/v1
-kind: deployment
+kind: Deployment
 metadata:
   name: commafeed
-  namesapace: media-stack
+  namespace: media-stack # 
   labels:
     app: commafeed
 spec:
   replicas: 1
-selector:
-  matchLabels:
-    app: commafeed
-template:
-  metadata:
-    labels:
-      app: commafeed 
-spech:
-  containers:
-  - name: commafeed
-    image: athou/commafeed:4.5.0
-    env:
-      - name: DATABASE_URL
-        value: "postgresql://$(DB_USER):$(DB_PASSWORD)@postgresql.database.svc.cluster.local:5432/commafeed"
-      - name: DATABASE_USER
-        valueFrom:
-          name: commafeed-creds
-          key: DB_USER
-          namespace: database 
-      - name: DB_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: commafeed-creds
-            key: DB_PASSWORD
-            namespace: database 
-    ports:
-      - containerPort: 8082
+  selector:
+    matchLabels:
+      app: commafeed
+  template:
+    metadata:
+      labels:
+        app: commafeed
+    spec:
+      containers:
+        - name: commafeed
+          image: commafeed/commafeed:2.9.0
+          env:
+            - name: DATABASE_URL
+              value: "postgresql://$(DB_USER):$(DB_PASSWORD)@postgresql.database.svc.cluster.local:5432/commafeed"
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: commafeed-creds
+                  key: DB_USER
+                  namespace: database # 
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: commafeed-creds
+                  key: DB_PASSWORD
+                  namespace: database # 
+          ports:
+            - containerPort: 8082
