--- a/cluster/apps/commafeed/commafeed-deployment.yaml
+++ b/cluster/apps/commafeed/commafeed-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: commafeed
-          image: commafeed/commafeed:2.9.0
+          image: athou/commafeed:4.5.0
           env:
             - name: DATABASE_URL
               value: "postgresql://$(DB_USER):$(DB_PASSWORD)@postgresql.database.svc.cluster.local:5432/commafeed"
