--- a/cluster/apps/commafeed/commafeed-deployment.yaml
+++ b/cluster/apps/commafeed/commafeed-deployment.yaml
@@ -1,8 +1,9 @@
+# cluster/apps/commafeed/commafeed-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: commafeed
-  namespace: media-stack  
+  namespace: database
   labels:
     app: commafeed
 spec:
@@ -19,14 +20,15 @@ spec:
         - name: commafeed
           image: athou/commafeed:4.5.0
           env:
-            - name: COMMAFEED_DATABASE_URL
-              value: "postgresql://postgresql.database.svc.cluster.local:5432/commafeed"
-            - name: COMMAFEED_DATABASE_USERNAME
+            # --- VARIABLES DE ENTORNO CORREGIDAS ---
+            - name: CF_DATABASE_URL
+              value: "jdbc:postgresql://postgresql.database.svc.cluster.local:5432/commafeed"
+            - name: CF_DATABASE_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: commafeed-creds
                   key: DB_USER
-            - name: COMMAFEED_DATABASE_PASSWORD
+            - name: CF_DATABASE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: commafeed-creds
