--- a/cluster/apps/commafeed/commafeed-deployment.yaml
+++ b/cluster/apps/commafeed/commafeed-deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: commafeed
-  namespace: database
+  namespace: media-stack
   labels:
     app: commafeed
 spec:
