--- a/cluster/apps/commafeed/commafeed-deployment.yaml
+++ b/cluster/apps/commafeed/commafeed-deployment.yaml
@@ -18,12 +18,9 @@ spec:
     spec:
       containers:
         - name: commafeed
-          image: athou/commafeed:4.5.0
+          # --- CHANGE THIS LINE ---
+          image: athou/commafeed:5.10.0-postgresql-jvm
           env:
-            # --- ADD THIS LINE ---
-            - name: CF_DATABASE_DRIVER
-              value: "org.postgresql.Driver"
-            # --- VARIABLES DE ENTORNO CORREGIDAS ---
             - name: CF_DATABASE_URL
               value: "jdbc:postgresql://postgresql.database.svc.cluster.local:5432/commafeed"
             - name: CF_DATABASE_USERNAME
