--- a/cluster/apps/commafeed/commafeed-deployment.yaml
+++ b/cluster/apps/commafeed/commafeed-deployment.yaml
@@ -18,17 +18,17 @@ spec:
     spec:
       containers:
         - name: commafeed
-          # --- CHANGE THIS LINE ---
           image: athou/commafeed:5.10.0-postgresql-jvm
           env:
-            - name: CF_DATABASE_URL
+            # --- CORRECT QUARKUS ENVIRONMENT VARIABLES ---
+            - name: QUARKUS_DATASOURCE_JDBC_URL
               value: "jdbc:postgresql://postgresql.database.svc.cluster.local:5432/commafeed"
-            - name: CF_DATABASE_USERNAME
+            - name: QUARKUS_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: commafeed-creds
                   key: DB_USER
-            - name: CF_DATABASE_PASSWORD
+            - name: QUARKUS_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: commafeed-creds
