--- a/cluster/apps/commafeed/kustomization.yaml
+++ b/cluster/apps/commafeed/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: 
-  - commafeed-deployment.yaml
-  - commafeed-networking.yaml
+resources:
+  - helm-release-db.yaml
+  - deployment.yaml
+  - networking.yaml
