--- a/cluster/apps/commafeed/deployment.yaml
+++ b/cluster/apps/commafeed/deployment.yaml
@@ -1,4 +1,3 @@
-# cluster/apps/commafeed/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,6 +7,8 @@ metadata:
     app: commafeed
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: commafeed
@@ -16,6 +17,24 @@ spec:
       labels:
         app: commafeed
     spec:
+      # Add init container to wait for database
+      initContainers:
+        - name: wait-for-db
+          image: postgres:15
+          command: ['sh', '-c']
+          args:
+            - |
+              until pg_isready -h commafeed-db-postgresql.media-stack.svc.cluster.local -p 5432 -U commafeed; do
+                echo "Waiting for database to be ready..."
+                sleep 2
+              done
+              echo "Database is ready!"
+          env:
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: commafeed-creds
+                  key: DB_PASSWORD
       containers:
         - name: commafeed
           image: athou/commafeed:5.10.0-postgresql-jvm
@@ -32,6 +51,19 @@ spec:
                 secretKeyRef:
                   name: commafeed-creds
                   key: DB_PASSWORD
+            # Add additional environment variables for CommAFeed
+            - name: COMMAFEED_DB_URL
+              value: "postgresql://commafeed-db-postgresql.media-stack.svc.cluster.local:5432/commafeed"
+            - name: COMMAFEED_DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: commafeed-creds
+                  key: DB_USER
+            - name: COMMAFEED_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: commafeed-creds
+                  key: DB_PASSWORD
           ports:
             - containerPort: 8080
           resources:
@@ -41,3 +73,18 @@ spec:
             limits:
               memory: "512Mi"
               cpu: "500m"
+          # Add health checks
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
