--- a/cluster/apps/commafeed/deployment.yaml
+++ b/cluster/apps/commafeed/deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - name: QUARKUS_DATASOURCE_JDBC_URL
               value: "jdbc:postgresql://commafeed-db-postgresql.media-stack.svc.cluster.local:5432/commafeed"
             - name: QUARKUS_DATASOURCE_USERNAME
-              value: "commafeed" # Use the correct username directly
+              value: "commafeed" 
             - name: QUARKUS_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -51,7 +51,7 @@ spec:
             - name: COMMAFEED_DB_URL
               value: "postgresql://commafeed-db-postgresql.media-stack.svc.cluster.local:5432/commafeed"
             - name: COMMAFEED_DB_USER
-              value: "commafeed" # Use the correct username directly
+              value: "commafeed" 
             - name: COMMAFEED_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
