--- a/cluster/apps/homepage/homepage-deployment.yaml
+++ b/cluster/apps/homepage/homepage-deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: homepage
-  namespace: media-stack # Usamos el mismo namespace
+  namespace: media-stack
   labels:
     app: homepage
 spec:
@@ -18,7 +18,10 @@ spec:
     spec:
       containers:
         - name: homepage
-          image: ghcr.io/gethomepage/homepage:latest 
+          image: ghcr.io/gethomepage/homepage:latest
+          env:
+            - name: HOMEPAGE_ALLOWED_HOSTS
+              value: "home.homelab.local"
           ports:
             - containerPort: 3000
           volumeMounts:
@@ -43,7 +46,7 @@ spec:
           configMap:
             name: homepage-config
 
---- # <-- SEPARADOR AÑADIDO
+---
 
 apiVersion: v1
 kind: Service
@@ -57,7 +60,7 @@ spec:
     - port: 3000
       targetPort: 3000
 
---- # <-- SEPARADOR AÑADIDO
+---
 
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
