fix: homepage config-map

--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -48,6 +48,9 @@ data:
             href: http://downloads.homelab.local
             icon: qbittorrent.png
            
+        - Commafeed:
+            href: http://rss.homelab.local
+            icon: commafeed.png
 
 
     - "Infraestructura":
