--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -63,4 +63,7 @@ data:
   settings.yaml: |
     title: Mi Homelab
     background: https://images.unsplash.com/photo-1470813740244-df37b8c1edcb
+    search:
+      provider: google
+      target: _blank
     # ...puedes añadir más personalización aquí...
