--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -13,7 +13,6 @@ data:
         - DuckDuckGo:
             href: https://duckduckgo.com
 
-
   # --- Configuración de los Widgets ---
   widgets.yaml: |
     - resources:
@@ -27,35 +26,36 @@ data:
         - Sonarr:
             href: http://series.homelab.local
             icon: sonarr.png
-           
+            description: Series TV
 
-        - Radarr: # Aunque no esté instalado, lo dejamos de ejemplo
+        - Radarr:
             href: http://movies.homelab.local
             icon: radarr.png
-           
+            description: Películas
 
         - Lidarr:
             href: http://music.homelab.local
             icon: lidarr.png
-           
+            description: Música
 
         - Prowlarr:
             href: http://prowlarr.homelab.local
             icon: prowlarr.png
-           
+            description: Indexador
 
         - qBittorrent:
             href: http://downloads.homelab.local
             icon: qbittorrent.png
-           
+            description: Descargas
+
         - Commafeed:
             href: http://rss.homelab.local
             icon: commafeed.png
-
+            description: RSS Reader
 
     - "Infraestructura":
         - Traefik:
-            href: http://traefik.homelab.local/dashboard/#/
+            href: http://traefik.homelab.local/dashboard/
             icon: traefik.png
             description: Dashboard de Traefik
 
@@ -66,4 +66,3 @@ data:
     search:
       provider: google
       target: _blank
-    # ...puedes añadir más personalización aquí...
