--- a/cluster/apps/homepage/homepage-configmap.yaml
+++ b/cluster/apps/homepage/homepage-configmap.yaml
@@ -8,6 +8,8 @@ data:
     - Búsqueda:
         - Google:
             href: "https://google.com"
+        - DuckDuckGo:
+            href: "https://duckduckgo.com"
 
   widgets.yaml: |
     - resources:
@@ -16,14 +18,38 @@ data:
         memory: true
 
   services.yaml: |
-    - "Test Services":
-        - Google:
-            href: "https://google.com"
-            icon: "google.png"
-            description: "Test service"
+    - "Mis Aplicaciones":
+        - Sonarr:
+            href: "http://series.homelab.local"
+            icon: "sonarr.png"
+            description: "Series TV"
+        - Radarr:
+            href: "http://movies.homelab.local"
+            icon: "radarr.png"
+            description: "Películas"
+        - Lidarr:
+            href: "http://music.homelab.local"
+            icon: "lidarr.png"
+            description: "Música"
+        - Prowlarr:
+            href: "http://prowlarr.homelab.local"
+            icon: "prowlarr.png"
+            description: "Indexador"
+        - qBittorrent:
+            href: "http://downloads.homelab.local"
+            icon: "qbittorrent.png"
+            description: "Descargas"
+        - Commafeed:
+            href: "http://rss.homelab.local"
+            icon: "commafeed.png"
+            description: "RSS Reader"
+    - "Infraestructura":
+        - Traefik:
+            href: "http://traefik.homelab.local/dashboard/"
+            icon: "traefik.png"
+            description: "Dashboard de Traefik"
 
   settings.yaml: |
     title: "Mi Homelab"
-    search:
-      provider: "google"
-      target: "_blank"
+    background: "https://images.unsplash.com/photo-1470813740244-df37b8c1edcb"
+    hideErrors: true
